--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "fortrabbit/laravel-object-storage",
     "description": "Flysystem adapter for fortrabbit Object Storage",
     "license": "MIT",
-    "version": "0.2",
+    "version": "1.0",
     "keywords": [
         "flysystem",
         "laravel",
@@ -25,8 +25,7 @@
         "illuminate/filesystem": "^5.5 | 6.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.10.8",
-        "friendsofphp/php-cs-fixer": "^2.12.2"
+        "phpstan/phpstan": "^0.10.8"
     },
     "autoload": {
         "psr-4": {
