--- a/.travis.yml
+++ b/.travis.yml
@@ -12,34 +12,34 @@ matrix:
   include:
     - php: 7.1
       env:
-        - COMPOSER_FLAGS="--prefer-lowest" # Cover laravel 5.5.x (LTS) vendors
+        - COMPOSER_FLAGS="--prefer-lowest" # Cover laravel ^5.5 (LTS) vendors
     - php: 7.1
       env:
-        - COMPOSER_FLAGS="" # Cover laravel 7.0.x (LTS) vendors
+        - COMPOSER_FLAGS="" # Cover laravel latest (LTS) vendors
     - php: 7.2
       env:
-        - COMPOSER_FLAGS="--prefer-lowest" # Cover laravel 5.5.x (LTS) vendors
+        - COMPOSER_FLAGS="--prefer-lowest" # Cover laravel ^5.5 (LTS) vendors
     - php: 7.2
       env:
-        - COMPOSER_FLAGS="" # Cover laravel 7.0.x (LTS) vendors
+        - COMPOSER_FLAGS="" # Cover laravel latest (LTS) vendors
     - php: 7.3
       env:
-        - COMPOSER_FLAGS="--prefer-lowest" # Cover laravel 5.5.x (LTS) vendors
+        - COMPOSER_FLAGS="--prefer-lowest" # Cover laravel ^5.5 (LTS) vendors
     - php: 7.3
       env:
-        - COMPOSER_FLAGS="" # Cover laravel 7.0.x (LTS) vendors
+        - COMPOSER_FLAGS="" # Cover laravel latest (LTS) vendors
     - php: 7.4
       env:
-        - COMPOSER_FLAGS="--prefer-lowest" # Cover laravel 5.5.x (LTS) vendors
+        - COMPOSER_FLAGS="--prefer-lowest" # Cover laravel ^5.5 (LTS) vendors
     - php: 7.4
       env:
-        - COMPOSER_FLAGS="" # Cover laravel 7.0.x (LTS) vendors
+        - COMPOSER_FLAGS="" # Cover laravel latest (LTS) vendors
     - php: nightly
       env:
-        - COMPOSER_FLAGS="--prefer-lowest" # Cover laravel 5.5.x (LTS) vendors
+        - COMPOSER_FLAGS="--prefer-lowest" # Cover laravel ^5.5 (LTS) vendors
     - php: nightly
       env:
-        - COMPOSER_FLAGS="" # Cover laravel 6.0.x (LTS) vendors
+        - COMPOSER_FLAGS="" # Cover laravel latest (LTS) vendors
   allow_failures:
     - php: 7.4
     - php: nightly
