--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
         "php": "^7.1",
         "league/flysystem": "^1.0.40",
         "aws/aws-sdk-php": "^3.0.0",
-        "league/flysystem-aws-s3-v3": "^1.0",
-        "illuminate/support": "^5.5 | 6.0",
-        "illuminate/filesystem": "^5.5 | 6.0"
+        "league/flysystem-aws-s3-v3": "^1.0.15",
+        "illuminate/support": "^5.5|^6.0",
+        "illuminate/filesystem": "^5.5|^6.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.10.8"
