--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "fortrabbit/laravel-object-storage",
     "description": "Flysystem adapter for fortrabbit Object Storage",
     "license": "MIT",
-    "version": "1.2",
+    "version": "1.3.0",
     "keywords": [
         "flysystem",
         "laravel",
@@ -21,8 +21,8 @@
         "league/flysystem": "^1.0.40",
         "aws/aws-sdk-php": "^3.0.0",
         "league/flysystem-aws-s3-v3": "^1.0.7",
-        "illuminate/support": "^5.5|^6.0|^7.0",
-        "illuminate/filesystem": "^5.5|^6.0|^7.0"
+        "illuminate/support": "^5.5|^6.0|^7.0|^8.0",
+        "illuminate/filesystem": "^5.5|^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12"
