--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "league/flysystem": "^3.0.0",
         "aws/aws-sdk-php": "^3.0.0",
         "league/flysystem-aws-s3-v3": "^3.0.0",
-        "illuminate/support": "^9.0",
-        "illuminate/filesystem": "^9.0",
+        "illuminate/support": "^9.0|^10.0",
+        "illuminate/filesystem": "^9.0|^10.0",
         "league/mime-type-detection": "^1.9"
     },
     "require-dev": {
