--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     ],
     "require": {
         "php": "^8.0",
-        "league/flysystem": "^3.0.0",
+        "league/flysystem": "^3.0.5",
         "aws/aws-sdk-php": "^3.0.0",
         "league/flysystem-aws-s3-v3": "^3.0.0",
-        "illuminate/support": "^9.0|^10.0",
-        "illuminate/filesystem": "^9.0|^10.0",
+        "illuminate/support": "^9.0|^10.0||^11.0",
+        "illuminate/filesystem": "^9.0|^10.0|^11.0",
         "league/mime-type-detection": "^1.9"
     },
     "require-dev": {
